# eval-kyc-aml-entity-screening

./: .debrand-banned.txt  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: eval-ci.yml
docs/superpowers/plans/: 2026-06-13-kyceval.md
docs/superpowers/specs/: 2026-06-13-kyceval-promptfoo-kyc-aml-design.md
evals/: baseline.json  promptfooconfig.yaml  redteam.yaml
evals/data/: calibration.json  promptfoo_tests.py  queries.json  redteam_fixture.json  redteam_seeds.json  sanctions_list.json
prompts/: screen_v1.txt  screen_v2.txt
scripts/: gen_data.py  record_cache.py  report.py
src/evaluator/: gate.py
src/evaluator/asserts/: citation.py  injection.py  match.py  pii.py  promptfoo_asserts.py  risk_tier.py
src/evaluator/judge/: calibration.py  faithfulness.py
src/evaluator/providers/: promptfoo_provider.py
src/sut/: llm.py  matcher.py  models.py  prompt.py  screen.py
tests/: test_asserts.py  test_calibration.py  test_data.py  test_gate.py  test_injection.py  test_judge.py  test_llm.py  test_matcher.py  test_models.py  test_provider.py  test_screen.py
